# uv-docker-example

./: .gitignore  Dockerfile  Dockerfile.multistage  Dockerfile.standalone  README.md  compose.yml  multistage.Dockerfile  pyproject.toml  run.sh  standalone.Dockerfile
.github/workflows/: ci.yaml
src/uv_docker_example/: __init__.py
